--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
                   <!-- Изменение глубины эффекта, накладываемого на изображение -->
                   <fieldset class="img-upload__effect-level  effect-level">
-                    <input class="effect-level__value" type="number" name="effect-level" value="">
+                    <input class="effect-level__value" type="number" name="effect-level hidden" value="">
                     <div class="effect-level__slider"></div>
                   </fieldset>
 
@@ -230,5 +230,6 @@
     <div class="img-upload__message  img-upload__message--loading">Загружаем...</div>
   </template>
 <script src="js/main.js" type="module"></script>
+<script src="nouislider/nouislider.js"></script>
 </body>
 </html>
