--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
                 <!-- Добавление хэш-тегов и комментария к изображению -->
                 <fieldset class="img-upload__text text">
-                  <input class="text__hashtags" name="hashtags" placeholder="#ХэшТег" required maxlength="20">
+                  <input class="text__hashtags" name="hashtags" placeholder="#ХэшТег" maxlength="20">
                   <textarea class="text__description" name="description" placeholder="Ваш комментарий..." minlength="2" maxlength="140"></textarea>
                 </fieldset>
 
